--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -14,219 +14,20 @@ $color6:rgb(75, 83, 78);
     cursor: pointer;
 }
 
+.mobileBouton {
+    border: none;
+    padding: 5px 10px;
+    border-radius: 200px;
+    font-size: 10px;
+
+    cursor: pointer;
+}
+
 body {
     font-family: 'Arial', sans-serif;
 
     margin: 0;
     padding: 0;
+    
 }
 
-// @keyframes move {
-//     100% {
-//         transform: translate3d(0, 0, 1px) rotate(360deg);
-//     }
-// }
-
-// {
-//     position: fixed;
-//     width: 100vw;
-//     height: 100vh;
-//     top: 0;
-//     left: 0;
-//     background: #3E1E68;
-//     overflow: hidden;
-// }
-
-//  span {
-//     width: 20vmin;
-//     height: 20vmin;
-//     border-radius: 20vmin;
-//     backface-visibility: hidden;
-//     position: absolute;
-//     animation: move;
-//     animation-duration: 45;
-//     animation-timing-function: linear;
-//     animation-iteration-count: infinite;
-// }
-
-
-// span:nth-child(0) {
-//     color: #E45A84;
-//     top: 73%;
-//     left: 37%;
-//     animation-duration: 9s;
-//     animation-delay: -48s;
-//     transform-origin: 1vw -19vh;
-//     box-shadow: -40vmin 0 5.538803824156347vmin currentColor;
-// }
-// span:nth-child(1) {
-//     color: #4b3c87;
-//     top: 96%;
-//     left: 44%;
-//     animation-duration: 13s;
-//     animation-delay: -3s;
-//     transform-origin: 14vw -15vh;
-//     box-shadow: -40vmin 0 5.091113327847769vmin currentColor;
-// }
-// span:nth-child(2) {
-//     color: #FFACAC;
-//     top: 54%;
-//     left: 25%;
-//     animation-duration: 9s;
-//     animation-delay: -8s;
-//     transform-origin: 3vw 13vh;
-//     box-shadow: -40vmin 0 5.608611204103166vmin currentColor;
-// }
-// span:nth-child(3) {
-//     color: #E45A84;
-//     top: 17%;
-//     left: 32%;
-//     animation-duration: 19s;
-//     animation-delay: -41s;
-//     transform-origin: -17vw -6vh;
-//     box-shadow: -40vmin 0 5.298761512333877vmin currentColor;
-// }
-// span:nth-child(4) {
-//     color: #FFACAC;
-//     top: 41%;
-//     left: 25%;
-//     animation-duration: 6s;
-//     animation-delay: -13s;
-//     transform-origin: 19vw 10vh;
-//     box-shadow: -40vmin 0 5.70937441069756vmin currentColor;
-// }
-//  span:nth-child(5) {
-//     color: #FFACAC;
-//     top: 71%;
-//     left: 85%;
-//     animation-duration: 19s;
-//     animation-delay: -47s;
-//     transform-origin: 11vw 24vh;
-//     box-shadow: 40vmin 0 5.932255939508974vmin currentColor;
-// }
-// span:nth-child(6) {
-//     color: #E45A84;
-//     top: 35%;
-//     left: 33%;
-//     animation-duration: 13s;
-//     animation-delay: -16s;
-//     transform-origin: -7vw 9vh;
-//     box-shadow: -40vmin 0 5.3050785942076395vmin currentColor;
-// }
-// span:nth-child(7) {
-//     color: #E45A84;
-//     top: 94%;
-//     left: 48%;
-//     animation-duration: 44s;
-//     animation-delay: -45s;
-//     transform-origin: 2vw 18vh;
-//     box-shadow: -40vmin 0 5.102632200009182vmin currentColor;
-// }
-//  span:nth-child(8) {
-//     color: #4b3c87;
-//     top: 28%;
-//     left: 97%;
-//     animation-duration: 22s;
-//     animation-delay: -6s;
-//     transform-origin: -23vw -11vh;
-//     box-shadow: 40vmin 0 5.095896048741611vmin currentColor;
-// }
-//  span:nth-child(9) {
-//     color: #FFACAC;
-//     top: 31%;
-//     left: 43%;
-//     animation-duration: 51s;
-//     animation-delay: -26s;
-//     transform-origin: 17vw 16vh;
-//     box-shadow: 40vmin 0 5.786795476456273vmin currentColor;
-// }
-// span:nth-child(10) {
-//     color: #FFACAC;
-//     top: 95%;
-//     left: 2%;
-//     animation-duration: 17s;
-//     animation-delay: -13s;
-//     transform-origin: 6vw -5vh;
-//     box-shadow: 40vmin 0 5.267508237928913vmin currentColor;
-// }
-//  span:nth-child(11) {
-//     color: #E45A84;
-//     top: 5%;
-//     left: 9%;
-//     animation-duration: 25s;
-//     animation-delay: -15s;
-//     transform-origin: 5vw 15vh;
-//     box-shadow: -40vmin 0 5.345938327850945vmin currentColor;
-// }
-// span:nth-child(12) {
-//     color: #FFACAC;
-//     top: 40%;
-//     left: 17%;
-//     animation-duration: 31s;
-//     animation-delay: -14s;
-//     transform-origin: -12vw -10vh;
-//     box-shadow: -40vmin 0 5.199768934375181vmin currentColor;
-// }
-//  span:nth-child(13) {
-//     color: #E45A84;
-//     top: 42%;
-//     left: 36%;
-//     animation-duration: 8s;
-//     animation-delay: -11s;
-//     transform-origin: -1vw 9vh;
-//     box-shadow: 40vmin 0 5.958626289986047vmin currentColor;
-// }
-// span:nth-child(14) {
-//     color: #4b3c87;
-//     top: 34%;
-//     left: 60%;
-//     animation-duration: 36s;
-//     animation-delay: -5s;
-//     transform-origin: -7vw 13vh;
-//     box-shadow: 40vmin 0 5.4010602838366175vmin currentColor;
-// }
-//  span:nth-child(15) {
-//     color: #E45A84;
-//     top: 94%;
-//     left: 16%;
-//     animation-duration: 30s;
-//     animation-delay: -40s;
-//     transform-origin: -9vw 25vh;
-//     box-shadow: -40vmin 0 5.092687923192798vmin currentColor;
-// }
-//  span:nth-child(16) {
-//     color: #E45A84;
-//     top: 81%;
-//     left: 68%;
-//     animation-duration: 33s;
-//     animation-delay: -20s;
-//     transform-origin: 0vw 10vh;
-//     box-shadow: 40vmin 0 5.3781336156695065vmin currentColor;
-// }
-//  span:nth-child(17) {
-//     color: #4b3c87;
-//     top: 92%;
-//     left: 85%;
-//     animation-duration: 31s;
-//     animation-delay: -35s;
-//     transform-origin: 6vw -17vh;
-//     box-shadow: -40vmin 0 5.990089214654931vmin currentColor;
-// }
-//  span:nth-child(18) {
-//     color: #4b3c87;
-//     top: 80%;
-//     left: 81%;
-//     animation-duration: 25s;
-//     animation-delay: -5s;
-//     transform-origin: 0vw 4vh;
-//     box-shadow: 40vmin 0 5.246021725664003vmin currentColor;
-// }
-//  span:nth-child(19) {
-//     color: #4b3c87;
-//     top: 78%;
-//     left: 69%;
-//     animation-duration: 6s;
-//     animation-delay: -2s;
-//     transform-origin: -4vw 18vh;
-//     box-shadow: 40vmin 0 5.7901729918380465vmin currentColor;
-// }
